potentially fixed issue with image overflow from parent div

--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -31,7 +31,7 @@
   }
 
   .album-cover {
-    max-height: 63%;
+    height: 55vh;
     object-fit: cover;
   }
 
